[gd_scene load_steps=7 format=2]

[ext_resource path="res://home/homeScript.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LemonMilk.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 2 )

[node name="homeRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 4.0
margin_top = 2.63963
margin_right = 91.0
margin_bottom = 46.6396
custom_fonts/font = SubResource( 1 )
text = "Home"

[node name="Hunger" type="Label" parent="."]
margin_left = 4.0
margin_top = 182.914
custom_fonts/font = ExtResource( 3 )
text = "Hunger: "

[node name="Happiness" type="Label" parent="."]
margin_left = 2.56802
margin_top = 149.521
custom_fonts/font = ExtResource( 3 )
text = "Happiness: "

[node name="Age" type="Label" parent="."]
margin_left = 4.0
margin_top = 99.8746
custom_fonts/font = ExtResource( 3 )
text = "Generation: "

[node name="Generation" type="Label" parent="."]
margin_left = 4.0
margin_top = 213.275
margin_right = 65.0
margin_bottom = 247.275
custom_fonts/font = ExtResource( 3 )
text = "Age: "

[node name="Name" type="Label" parent="."]
margin_left = 4.0
margin_top = 68.0
margin_bottom = 106.636
custom_fonts/font = ExtResource( 3 )
text = "Name: "

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -13.0
margin_top = 243.0
margin_right = 331.0
margin_bottom = 244.0

[node name="Store" type="Button" parent="."]
margin_left = 203.0
margin_top = 356.0
margin_right = 286.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 3 )
text = "Store"

[node name="Games" type="Button" parent="."]
margin_left = 203.0
margin_top = 306.526
margin_right = 286.0
margin_bottom = 346.526
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="Feed" type="Button" parent="."]
margin_left = 6.0
margin_top = 251.0
margin_right = 51.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 2 )
text = "Feed"

[node name="Feed_Amount" type="Label" parent="Feed"]
margin_left = 2.0
margin_top = 25.0
margin_right = 20.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "x0"

[node name="Toy" type="Button" parent="."]
margin_left = 59.6842
margin_top = 251.0
margin_right = 104.684
margin_bottom = 278.0
rect_pivot_offset = Vector2( 769.579, -69 )
custom_fonts/font = SubResource( 2 )
text = "Give Toy"

[node name="Toy_Amount" type="Label" parent="Toy"]
margin_left = 1.783
margin_top = 24.5688
margin_right = 19.783
margin_bottom = 44.5688
custom_fonts/font = SubResource( 3 )
text = "x0"
[connection signal="pressed" from="Feed" to="." method="_on_Feed_pressed"]
